<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/wishSubmitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/wishBtnText"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editWish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="wishItem"
        android:windowSoftInputMode="adjustResize"
        android:hint="@string/enterWishText"
        android:inputType="textPersonName"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editWishUrl"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/wishItemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="wishPrice"
        android:hint="@string/examplePriceText"
        android:inputType="numberDecimal"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/wishSubmitBtn"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editWishUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="wishURL"
        android:hint="@string/exampleUrlText"
        android:inputType="textUri"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>