<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/wishItemView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="47dp"
        android:ellipsize="end"
        android:gravity="start"
        android:lines="1"
        android:shadowColor="@color/purple_500"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="50"
        android:textAllCaps="true"
        android:text="@string/wishSampleText"
        android:textSize="20sp"
        android:fontFamily="@font/nerko"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/wishPriceView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wishPriceView"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:ellipsize="end"
        android:gravity="end"
        android:lines="1"
        android:text="@string/wishPriceSampleText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/wishUrlView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wishUrlView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:gravity="end"
        android:lines="1"
        android:shadowColor="@color/teal_200"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="50"
        android:text="@string/wishUrlSampleText"
        android:textSize="15sp"
        android:clickable="true"
        android:textColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wishPriceView" />
</androidx.constraintlayout.widget.ConstraintLayout>